--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-	<script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" ></nav>
+	
+ <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
 <a class="navbar-brand" href="#">Navbar</a>
 <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" >
 	<span class="navbar-toggler-icon" ></span>
@@ -25,10 +24,50 @@
 		</li>
 		<li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-		</li>
-	</ul>
-
-
+			<div class="dropdown-menu" aria-labelledby="dropdown01">
+				<a class="dropdown-item" href="#">item</a>
+				<a class="dropdown-item" href="#">outro item</a>
+				<a class="dropdown-item" href="#">algum outro item</a>
+				</div>
+			</li>
+		</ul>
+	</div>
+</nav>
+<main role="main">
+	<!-- jumbtron para principal mensagem de marketing ou call to action -->
+	<div class="jumbotron">
+		<div class="container">
+			<h1 class="display-3">Especialistas na criação de sites</h1>
+			<p>Loja Online & Marketing Digital</p>
+			<p><a class="btn btn-primary btn-lg" href="#" role="button">saiba mais &raquo;</a></p>
+		</div>
+	</div>
+	<div class="container" >
+		<!-- exemplo de linha de colunas-->
+<div class="row">
+	<div class="col-md-4">
+		<h2>Criação de sites</h2>
+		<p>Pretende cria um site com qualidade e criatividade. criamos sites que potenciam negocios.</p>
+		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+	</div>
+	<div class="col-md-4" >
+		<h2>Marketing Digital</h2>
+		<p>Destaque o seu site com campanhas de marketing digital no google e no facebook.</p>
+		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+	</div>
+	<div class="col-md-4" >
+		<h2>Design</h2>
+		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
+		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+	</div>
 </div>
+<hr>
+	</div> <!--/container-->
+</main>
+<footer class="container">
+	<p> &copy; campanha gpso 2020-2021</p>
+</footer>
+<script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
