Update criacaosite.html, design.html, and 13 more files...

--- a/marketing.html
+++ b/marketing.html
@@ -15,7 +15,7 @@
 <div class="collapse navbar-collapse" id="navbarsExampleDefault" >
 	<ul class="navbar-nav mr-auto">
 		<li class="=nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(atual)</span></a>
+			<a class="nav-link" href="index.html">Home <span class="sr-only">(atual)</span></a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">link</a>
@@ -34,13 +34,13 @@
 		</ul>
 	</div>
 </nav>
-<main role="main">
+<main role="main" style="background-image: url(img/linha.jpg);" >
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron">
-		<div class="container">
-			<h1 class="display-3">Especialistas na criação de sites</h1>
-			<p>Loja Online & Marketing Digital</p>
-			<p><a class="btn btn-primary btn-lg" href="#" role="button">saiba mais &raquo;</a></p>
+	<div class="jumbotron" style="background-image: url(img/mark2.png);">
+		<div class="container" align="center" >
+			<h1 class="display-3" style="background-image: url(img/fundo.png);" >Marketing Digital</h1>
+			<p style="background-image: url(img/fundo.png); " >Marketing Digital</p>
+			<p><a class="btn btn-primary btn-lg" href="https://pt.wikipedia.org/wiki/Marketing_digital" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
 	<div class="container" >
@@ -51,11 +51,7 @@
 		<p>Pretende cria um site com qualidade e criatividade. criamos sites que potenciam negocios.</p>
 		<p><a class="btn btn-secondary" href="criacaosite.html" role="button">Ver detalhes &raquo;</a></p>
 	</div>
-	<div class="col-md-4" >
-		<h2>Marketing Digital</h2>
-		<p>Destaque o seu site com campanhas de marketing digital no google e no facebook.</p>
-		<p><a class="btn btn-secondary" href="marketing.html" role="button">Ver detalhes &raquo;</a></p>
-	</div>
+	
 	<div class="col-md-4" >
 		<h2>Design</h2>
 		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
