--- a/criacaosite.html
+++ b/criacaosite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Especialistas</title>
+	<title>Criação de sites</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="jumbotrom.css">
 </head>
@@ -15,7 +15,7 @@
 <div class="collapse navbar-collapse" id="navbarsExampleDefault" >
 	<ul class="navbar-nav mr-auto">
 		<li class="=nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(atual)</span></a>
+			<a class="nav-link" href="index.html">Home <span class="sr-only">(atual)</span></a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">link</a>
@@ -34,23 +34,19 @@
 		</ul>
 	</div>
 </nav>
-<main role="main">
+<main role="main" style="background-image: url(img/fundo2.png);" >
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron">
+	<div class="jumbotron" style="background-image: url(img/siteimg.png);">
 		<div class="container">
-			<h1 class="display-3">Especialistas na criação de sites</h1>
-			<p>Loja Online & Marketing Digital</p>
-			<p><a class="btn btn-primary btn-lg" href="#" role="button">saiba mais &raquo;</a></p>
+			<h1 style="background-image: url(img/fundo.png);" class="display-3">Criação de Sites</h1>
+			<p style="background-image: url(img/fundo.png);" >Saber mais sobre criação de sites</p>
+			<p><a class="btn btn-primary btn-lg" href="img/404.jpg" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
 	<div class="container" >
 		<!-- exemplo de linha de colunas-->
 <div class="row">
-	<div class="col-md-4">
-		<h2>Criação de sites</h2>
-		<p>Pretende cria um site com qualidade e criatividade. criamos sites que potenciam negocios.</p>
-		<p><a class="btn btn-secondary" href="criacaosite.html" role="button">Ver detalhes &raquo;</a></p>
-	</div>
+	
 	<div class="col-md-4" >
 		<h2>Marketing Digital</h2>
 		<p>Destaque o seu site com campanhas de marketing digital no google e no facebook.</p>
