--- a/design.html
+++ b/design.html
@@ -4,9 +4,18 @@
 	<title>Especialistas</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="jumbotrom.css">
+	<style>
+	.fundo{
+background: url('img/fundo5.jpg');
+background-repeat: no-repeat;
+ background-size: cover;
+}
+
+	
+</style>
 </head>
 <body>
-	
+
  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
 <a class="navbar-brand" href="#">Navbar</a>
 <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" >
@@ -36,7 +45,7 @@
 </nav>
 <main role="main">
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron">
+	<div class="jumbotron fundo">
 		<div class="container">
 			<h1 class="display-3">Especialistas na criação de sites</h1>
 			<p>Loja Online & Marketing Digital</p>
@@ -56,11 +65,7 @@
 		<p>Destaque o seu site com campanhas de marketing digital no google e no facebook.</p>
 		<p><a class="btn btn-secondary" href="marketing.html" role="button">Ver detalhes &raquo;</a></p>
 	</div>
-	<div class="col-md-4" >
-		<h2>Design</h2>
-		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
-		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
-	</div>
+	
 </div>
 <hr>
 	</div> <!--/container-->
