Update back.gif, back.mp4, and 5 more files...

--- a/criacaosite.html
+++ b/criacaosite.html
@@ -4,6 +4,26 @@
 	<title>Criação de sites</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="jumbotrom.css">
+		<style>
+	.fundo{
+background: url(img/fundo2.png);
+
+}
+.fundo2{
+background: url(img/fundo.png);
+
+}
+.fundo3{
+background: url(img/linha.jpg);
+
+}
+.fundo4{
+background: url(img/siteimg.png);
+
+}
+	
+</style>
+
 </head>
 <body>
 	
@@ -34,12 +54,12 @@
 		</ul>
 	</div>
 </nav>
-<main role="main" style="background-image: url(img/fundo2.png);" >
+<main role="main" class="fundo"  >
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron" style="background-image: url(img/siteimg.png);">
+	<div class="jumbotron fundo4" >
 		<div class="container">
-			<h1 style="background-image: url(img/fundo.png);" class="display-3">Criação de Sites</h1>
-			<p style="background-image: url(img/fundo.png);" >Saber mais sobre criação de sites</p>
+			<h1  class="display-3 fundo2">Criação de Sites</h1>
+			<p class="fundo2" >Saber mais sobre criação de sites</p>
 			<p><a class="btn btn-primary btn-lg" href="img/404.jpg" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
@@ -55,7 +75,7 @@
 	<div class="col-md-4" >
 		<h2>Design</h2>
 		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
-		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+		<p><a class="btn btn-secondary" href="design.html" role="button">Ver detalhes &raquo;</a></p>
 	</div>
 </div>
 <hr>
