--- a/design.html
+++ b/design.html
@@ -10,6 +10,11 @@ background: url('img/fundo5.jpg');
 background-repeat: no-repeat;
  background-size: cover;
 }
+.fundo2{
+background: url(img/fundo.png);
+background-repeat: no-repeat;
+ background-size: cover;
+}
 
 	
 </style>
@@ -47,9 +52,9 @@ background-repeat: no-repeat;
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
 	<div class="jumbotron fundo">
 		<div class="container">
-			<h1 class="display-3">Especialistas na criação de sites</h1>
-			<p>Loja Online & Marketing Digital</p>
-			<p><a class="btn btn-primary btn-lg" href="#" role="button">saiba mais &raquo;</a></p>
+			<h1 class="display-3 fundo2">Especialistas na criação de sites</h1>
+			<p class="fundo2">Loja Online & Marketing Digital</p>
+			<p><a class="btn btn-primary btn-lg  " href="#" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
 	<div class="container" >
