--- a/marketing.html
+++ b/marketing.html
@@ -4,6 +4,21 @@
 	<title>Especialistas</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="jumbotrom.css">
+	<style>
+	.fundo{
+background: url(img/mark2.png);
+
+}
+.fundo2{
+background: url(img/fundo.png);
+
+}
+.fundo3{
+background: url(img/linha.jpg);
+
+}
+	
+</style>
 </head>
 <body>
 	
@@ -34,12 +49,12 @@
 		</ul>
 	</div>
 </nav>
-<main role="main" style="background-image: url(img/linha.jpg);" >
+<main role="main" class="fundo3" >
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron" style="background-image: url(img/mark2.png);">
+	<div class="jumbotron fundo"">
 		<div class="container" align="center" >
-			<h1 class="display-3" style="background-image: url(img/fundo.png);" >Marketing Digital</h1>
-			<p style="background-image: url(img/fundo.png); " >Marketing Digital</p>
+			<h1 class="display-3 fundo2" >Marketing Digital</h1>
+			<p class="fundo2"  >Marketing Digital</p>
 			<p><a class="btn btn-primary btn-lg" href="https://pt.wikipedia.org/wiki/Marketing_digital" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
@@ -55,7 +70,7 @@
 	<div class="col-md-4" >
 		<h2>Design</h2>
 		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
-		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+		<p><a class="btn btn-secondary" href="design.html" role="button">Ver detalhes &raquo;</a></p>
 	</div>
 </div>
 <hr>
