--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 	<title>Especialistas</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="jumbotrom.css">
+	<link rel="stylesheet" type="text/css" href="estilosvi.css">
+	<style>
+	.fundo{
+background: url('back.gif');
+background-repeat: no-repeat;
+ background-size: cover;
+}
+.fundo2{
+background: url(img/fundo.png);
+background-repeat: no-repeat;
+ background-size: cover;
+}
+
+	
+</style>
 </head>
+<style>
+
+	
+</style>
 <body>
 	
  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
@@ -34,12 +53,15 @@
 		</ul>
 	</div>
 </nav>
-<main role="main">
+
+<main class="role">
+
+
 	<!-- jumbtron para principal mensagem de marketing ou call to action -->
-	<div class="jumbotron">
+	<div class="jumbotron fundo">
 		<div class="container">
-			<h1 class="display-3">Especialistas na criação de sites</h1>
-			<p>Loja Online & Marketing Digital</p>
+			<h1 class="display-3 fundo2" >Especialistas na criação de sites</h1>
+			<p class="fundo2" >Loja Online & Marketing Digital</p>
 			<p><a class="btn btn-primary btn-lg" href="#" role="button">saiba mais &raquo;</a></p>
 		</div>
 	</div>
@@ -59,12 +81,12 @@
 	<div class="col-md-4" >
 		<h2>Design</h2>
 		<p>Uma imagem criativa permite potenciar e diferenciar o seu negocio. Criamos logotipos que marcam.</p>
-		<p><a class="btn btn-secondary" href="#" role="button">Ver detalhes &raquo;</a></p>
+		<p><a class="btn btn-secondary" href="design.html" role="button">Ver detalhes &raquo;</a></p>
 	</div>
 </div>
 <hr>
 	</div> <!--/container-->
-</main>
+</main> 
 <footer class="container">
 	<p> &copy; campanha gpsi 2020-2021</p>
 </footer>
